build/log/idf_py_stdout_output_19344
[1/13] Linking C static library esp-idf\bee_wifi\libbee_wifi.a
[2/13] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D E:\SHT3x_Powersave\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Espressif/frameworks/esp-idf-v5.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 E:/SHT3x_Powersave/build/bootloader/bootloader.bin"
Bootloader binary size 0x6a10 bytes. 0x5f0 bytes (5%) free.
[3/11] Building C object esp-idf/bee_deep_sleep/CMakeFiles/__idf_bee_deep_sleep.dir/bee_deep_sleep.c.obj
FAILED: esp-idf/bee_deep_sleep/CMakeFiles/__idf_bee_deep_sleep.dir/bee_deep_sleep.c.obj 
ccache C:\Espressif\tools\xtensa-esp32-elf\esp-12.2.0_20230208\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IE:/SHT3x_Powersave/build/config -IE:/SHT3x_Powersave/components/bee_deep_sleep -IC:/Espressif/frameworks/esp-idf-v5.1/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/freertos/esp_additions/arch/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/. -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/port/esp32/private_include -IC:/Espressif/frameworks/esp-idf-v5.1/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/soc/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/include/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_rom/esp32 -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/xtensa/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/freertos/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/lwip/port/esp32xx/include/arch -IE:/SHT3x_Powersave/components/bee_sht3x -IE:/SHT3x_Powersave/components/bee_i2c -IE:/SHT3x_Powersave/components/bee_mqtt -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/analog_comparator/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/dac/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/gpio/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/gptimer/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/i2c/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/i2s/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/ledc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/mcpwm/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/parlio/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/pcnt/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/rmt/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sdio_slave/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sdmmc/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/sigma_delta/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/spi/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/temperature_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/twai/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/uart/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/usb_serial_jtag/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/driver/touch_sensor/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.1/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=E:/SHT3x_Powersave=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.1=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/bee_deep_sleep/CMakeFiles/__idf_bee_deep_sleep.dir/bee_deep_sleep.c.obj -MF esp-idf\bee_deep_sleep\CMakeFiles\__idf_bee_deep_sleep.dir\bee_deep_sleep.c.obj.d -o esp-idf/bee_deep_sleep/CMakeFiles/__idf_bee_deep_sleep.dir/bee_deep_sleep.c.obj -c E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c
E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c: In function 'example_deep_sleep_register_ext1_wakeup':
E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c:67:79: error: 'ext_wakeup_pin_2' undeclared (first use in this function); did you mean 'ext_wakeup_pin_0'?
   67 |     printf("Enabling EXT1 wakeup on pins GPIO%d, GPIO%d\n", ext_wakeup_pin_0, ext_wakeup_pin_2);
      |                                                                               ^~~~~~~~~~~~~~~~
      |                                                                               ext_wakeup_pin_0
E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c:67:79: note: each undeclared identifier is reported only once for each function it appears in
In file included from C:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/esp_intr_alloc.h:11,
                 from C:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/esp_cpu.h:20,
                 from C:/Espressif/frameworks/esp-idf-v5.1/components/esp_hw_support/include/spinlock.h:11,
                 from C:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:74,
                 from C:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:59,
                 from C:/Espressif/frameworks/esp-idf-v5.1/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:71,
                 from E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c:5:
E:/SHT3x_Powersave/components/bee_deep_sleep/bee_deep_sleep.c:68:74: error: 'ext_wakeup_pin_2_mask' undeclared (first use in this function); did you mean 'ext_wakeup_pin_0_mask'?
   68 |     ESP_ERROR_CHECK(esp_sleep_enable_ext1_wakeup(ext_wakeup_pin_0_mask | ext_wakeup_pin_2_mask, ESP_EXT1_WAKEUP_ANY_HIGH));
      |                                                                          ^~~~~~~~~~~~~~~~~~~~~
C:/Espressif/frameworks/esp-idf-v5.1/components/esp_common/include/esp_err.h:117:30: note: in definition of macro 'ESP_ERROR_CHECK'
  117 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
[4/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/bee_main.c.obj
ninja: build stopped: subcommand failed.
